--- a/spring-webflux-rest-api-first/build.gradle
+++ b/spring-webflux-rest-api-first/build.gradle
@@ -14,6 +14,8 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
+    implementation 'com.playtika.reactivefeign:feign-reactor-spring-cloud-starter:3.2.6'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.projectreactor:reactor-test'
 }
